--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.2",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "chokidar": "^3.5.3",
