--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.1.0",
     "passport": "^0.6.0",
     "passport-kakao": "^1.0.1",
